<resources>
    <string name="app_name">Travel organizer</string>
    <string name="menu_header">Travel organizer</string>
    <string name="new_travel">New travel</string>
    <string name="saved_travels">My travels</string>
    <string name="general_stats">Stats</string>
    <string name="nonameerror">Please type travel name</string>
    <string name="nodatefromerror">Please select start date</string>
    <string name="nodatetoerror">Please select ending date</string>
    <string name="nobudgeterror">Please type travel budget</string>
    <string name="noageerror">Please type your age</string>
    <string name="typeinteger">Please type a number</string>
    <string name="traveldataeditinfo">Please give travel data. You can change them later.</string>
    <string name="labeldatefrom">Date from (DD MM YYYY)</string>
    <string name="labeldateto">Date to (DD MM YYYY)</string>
    <string name="labeltravelname">Travel name</string>
    <string name="labelbudget">Travel budget</string>
    <string name="baddateformaterror">Please type correct date</string>
    <string name="datetosmallererror">Second date cannot be the earlier one</string>
    <string name="decimalplaceserror">Max two decimal places</string>
    <string name="submittext">Submit</string>
    <string name="maxninenumbers">Maximum 9 characters</string>
    <string name="maxthreenumbers">Maximum 3 characters</string>
    <string name="typecorrectage">Type correct age</string>
    <string name="maxthirtyletters">Maximum 30 letters</string>
    <string name="shoppinglistbuttonlabel">Shopping list</string>
    <string name="topackbuttonlabel">To pack</string>
    <string name="ridesbuttonlabel">Rides</string>
    <string name="notesbuttonlabel">Notes</string>
    <string name="statsbuttonlabel">Travel stats</string>
    <string name="editlabel">Edit</string>
    <string name="deletelabel">Delete</string>
    <string name="cautionlabel">Caution</string>
    <string name="deletetravelquestion">Do you really want to delete this travel with all its data?</string>
    <string name="yeslabel">Yes</string>
    <string name="nolabel">No</string>
    <string name="expensesbuttonlabel">Expenses</string>
    <string name="deletedinfo">Deleted successfully</string>
    <string name="newtravellabel">New travel</string>
    <string name="updatebuttonlabel">Update</string>
    <string name="updateactivitylabel">Travel update</string>
    <string name="authorlabel">Author</string>
    <string name="credits">Credits</string>
    <string name="closelabel">Close</string>
    <string name="authorinfo">Łukasz Dutka is the author of this app.</string>
    <string name="creditsinfo">Background photo by Jake Blucker on Unsplash.</string>
    <string name="creditsinfotwo">Icons made by Freepik and Pause08 from www.flaticon.com</string>
    <string name="makenewpacklistlabel">Create list from scratch</string>
    <string name="collaborativefilteringlabel">Generate list using collaborative filtering</string>
    <string name="decisiontreelabel">Generate list using decision tree</string>
    <string name="newmethodlabel">Generate list using new method</string>
    <string name="copyexistingpacklistlabel">Copy and edit existing list</string>
    <string name="noexistinglistlabel">You have not created any list yet.</string>
    <string name="createingnewpacklistlabel">Creating new list</string>
    <string name="title_activity_pack_list">To pack list</string>
    <string name="holidaytypelabel">Travel type</string>
    <string name="meanoftransportlabel">Mean of transport</string>
    <string name="expectedweatherlabel">Expected weather</string>
    <string name="genderlabel">Your gender</string>
    <string name="tabclotheslabel">Clothes</string>
    <string name="tabhygienelabel">Hygiene</string>
    <string name="tabdocumentslabel">Documents</string>
    <string name="tabelectroinicslabel">Electronics</string>
    <string name="tabotherslabel">Others</string>
    <string name="holidaycategoryrest">Rest</string>
    <string name="holidaycategorysport">Sport</string>
    <string name="holidaycategorytourist">Sightseeing</string>
    <string name="holidaycategorybusiness">Business</string>
    <string name="deletepacklistquestion">Do you really want to delete this list to pack?</string>
    <string name="newitemtobacktitle">New thing to pack</string>
    <string name="namenewitemtopacklabel">Name</string>
    <string name="nonameitemtopackerror">Please type item name</string>
    <string name="quantitylabel">Quantity</string>
    <string name="categorylabel">Category</string>
    <string name="carlabel">Car</string>
    <string name="planelabel">Plane</string>
    <string name="puplictransportlabel">Public transport</string>
    <string name="trainlabel">Train</string>
    <string name="shiplabel">Ship</string>
    <string name="bikelabel">Bike</string>
    <string name="onfootlabel">On foot</string>
    <string name="otherlabel">Other</string>
    <string name="coldweatherlabel">Cold</string>
    <string name="mildweatherlabel">Mild</string>
    <string name="warmweatherlabel">Warm</string>
    <string name="hotweatherlabel">Hot</string>
    <string name="changingweatherlabel">Changing / I don\'t know</string>
    <string name="femalelabel">Female</string>
    <string name="malelabel">Male</string>
    <string name="accomodationlabel">Accomodation</string>
    <string name="foodlabel">Food</string>
    <string name="sightseeinglabel">Sightseeing</string>
    <string name="givetoshoplistcheckbox">To buy</string>
    <string name="addbuttonlabel">Add</string>
    <string name="edititemtopack">Edit item</string>
    <string name="choosepacklisttocopylabel">Choose list to be copied</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <string name="shoppinglistlabel">Shopping list</string>
    <string name="pricelabel">Price:</string>
    <string name="pricetextviewlabel">Price (can be added later)</string>
    <string name="badpriceformat">Bad number format</string>
    <string name="noshopitemerror">Please type item name</string>
    <string name="pricemorethanzeroerror">Price must be higher than 0</string>
    <string name="addshopitemlabel">New item</string>
    <string name="budgethigherzerooerror">Budget must be higher than 0</string>
    <string name="nopricetobouy">You have to edit item and add price to mark it as bought</string>
    <string name="ridesactivitylabel">Rides</string>
    <string name="providepricelabel">Please provide price</string>
    <string name="providepricemessage">You have to add items price in order to mark it as bought.</string>
    <string name="submitpricelabel">Submit</string>
    <string name="cancellabel">Cancel</string>
    <string name="age">Age</string>
    <string name="addnewrideactivitylabel">New ride</string>
    <string name="timehint">Time (HH MM, hours 00-23)</string>
    <string name="maxsixtylettererror">Max 40 letters</string>
    <string name="noridenameerror">Please type ride name</string>
    <string name="noprzejazddateerror">Please give date of ride</string>
    <string name="ridenotbetweentraveldateerror">The date must be within travel dates</string>
    <string name="notimeerror">Please type time of ride</string>
    <string name="badtimeformaterror">Bad time format</string>
    <string name="editridelabel">Edit ride</string>
    <string name="addexpenselabel">Add expense</string>
    <string name="nopriceerror">You have to give price</string>
    <string name="priceobligatorylabel">Cost</string>
    <string name="editwydateklabel">Edit expense</string>
    <string name="costlabel">Cost:</string>
    <string name="notitleofnote">Please type title of note!</string>
    <string name="titlenote">Title</string>
    <string name="contentnote">Content</string>
    <string name="newnotelabel">New note</string>
    <string name="editnotelabel">Edition of note</string>
    <string name="savelabel">Save</string>
    <string name="choosetravellabel">Choose travel</string>
    <string name="errorloadingimage">Error ocupied while loading image. Try load another one.</string>
    <string name="emptypacklist">List of things to pack is empty.</string>
    <string name="initlabelpacklist">Things to pack:</string>
    <string name="quantityshort">pc(s).</string>
    <string name="shoppinglistempty">Shopping list is empty.</string>
    <string name="shoppinglistinit">Shopping list:</string>
    <string name="send_to">Send to</string>
    <string name="boughtlabel">Bought</string>
    <string name="nosaveinfo">If you do not save given data, you will lose it. Do you want to exit without saving?</string>
    <string name="statslabel">Travel stats</string>
    <string name="imageerrormessage">Error during loading image.  Maybe it was deleted from gallery. Go back and choose another photo.</string>
    <string name="pokryciebudzetulabel">Budget covarage in percents (contains only expenses in </string>
    <string name="procentvaluelabel">Percentage</string>
    <string name="wykresrodzajetransportulabel">Which means of transport did you use:</string>
    <string name="spentmoeneylabel">Spent money by categories</string>
    <string name="numericaldata">Numerical data</string>
    <string name="traveldurationlabel">The travel lasts</string>
    <string name="daylabel">day</string>
    <string name="dayslabel">days</string>
    <string name="averagecostlabel">Average cost of one day is:</string>
    <string name="numberofrideslabel">During your travel you take</string>
    <string name="ridelabel">ride</string>
    <string name="ridesmanylabel">rides</string>
    <string name="listtopacklabel">You listed to pack</string>
    <string name="thinglabel">thing</string>
    <string name="thingslabel">things</string>
    <string name="youpackedlabel">, you packed</string>
    <string name="currencylabel">Currency (tap to change)</string>
    <string name="defaultcurrency">USD</string>
    <string name="expensespaidin">Expenses paid in</string>
    <string name="bycategory">by category</string>
    <string name="totalcostlabel">Total cost of travel is:</string>
    <string name="statsgloballabel">Stats</string>
    <string name="daneIlePodrozy">- that\'s how many travels you\'ve already had</string>
    <string name="daneiledni">- days you were travelling</string>
    <string name="daneilewalut">- amount of different currencies you have used</string>
    <string name="daneileprzejazdów">- that\'s how many rides you had during all travels</string>
    <string name="howmanytimesintravel">How many times in particular month you were on trip?</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="June">Jun</string>
    <string name="July">Jul</string>
    <string name="August">Aug</string>
    <string name="September">Sep</string>
    <string name="October">Oct</string>
    <string name="November">Nov</string>
    <string name="Decmber">Dec</string>
    <string name="usedmeans">Used means of transport in percent</string>

</resources>