<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/travelmainmenuactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TravelMainMenuActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/button4"
        android:layout_width="274dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/buttonshape"
        android:drawableStart="@drawable/suitcaseicon"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/topackbuttonlabel"
        android:textColor="@color/fontColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="274dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:drawableStart="@drawable/shoppingicon"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/shoppinglistbuttonlabel"
        android:textColor="@color/fontColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="274dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:drawableStart="@drawable/ridesicon"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/ridesbuttonlabel"
        android:textColor="@color/fontColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button10"
        android:layout_width="274dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:drawableStart="@drawable/moneyicon"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/expensesbuttonlabel"
        android:textColor="@color/fontColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button8"
        android:layout_width="274dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:drawableStart="@drawable/notesicon"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/notesbuttonlabel"
        android:textColor="@color/fontColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button9"
        android:layout_width="274dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:drawableStart="@drawable/statsiconduzy"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/statsbuttonlabel"
        android:textColor="@color/fontColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>